# optimal_smurf

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml  unit-tests.yml
examples/: coloring.rs  knapsack.rs  plot.rs
src/: lib.rs
