[package]
name = "optimal_smurf"
version = "0.1.0"
authors = ["Dirk Leifeld <leifeld@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

readme = "README.md"
repository = "https://github.com/EdorianDark/optimal_smurf"
license = "Apache-2.0"

[dependencies]


[dev-dependencies]
